se agrego la funcion completa del metodo de envio, ademas de que se cambio como se muestran los datos en el evento 2

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,9 @@ Contenedor de informacion
 
 .contenedor-btn{
     text-align: end;
+    position: fixed;
+    right: 30px;
+    bottom: 35px;
 }
 
 .contenedor-informacion table{
